	13005 Angelic Wing Dagger:	NEED INFO.
	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================

02/08
	* Fixed a skill_db.txt typo for AS_ENCHANTPOISON introduced in r9794 [ultramage]
02/07
	* Modified Spider web so that it can't be casted on top of another web.
	* Updated the range of BioExplosion and Self Destruction so they count as
	  ranged skills.
02/05
	* Updated comments and inf2 values of the skill_db to use the new format.
	* Soul Change now can't be casted on self.
	* Updated range of Grandcross, Granddarkness and Gospel to 5 so when they
	  attack their attack type is counted as ranged.
	* Fixed Venom Splasher not being Poison elemental
02/02
	* Completed Amon Ra's spell list. Note that they probably need a delay
	  added because of the way eA differs from Aegis on the skillused condition.
02/01
	* Updated the mob_db so that all skills from non-moving mobs that specified
	  'target' as enemy will use 'randomtarget' instead.
	* Amon Ra's meteors now use randomtarget instead of self.
	* Corrected item 1459 (unused Partizan with no slots) being wlv3 instead of
	  2 (as the other two partizans)
	* Changed the name of the four second versions of homunculi to not have a
	  2. (so you get a 'lif' and not a 'lif2')
	* Removed flag graffiti from abracadabra.
	* Updated the stun times of Bash, Npc-StunAttack and meteor Assault to 5
	  secs as reported by Ultra Mage (still pending more data to see if all
	  others need updating as well)
01/30
	* Blood Drain and Energy Drain have their range updated to 7.
	* Changed the element of Blood Drain from 'take weapon's element' to Dark.
	  [Skotlex]
01/24